fixed the proble with extra space at the bottom of portfolio image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,7 +140,6 @@ textarea {
 
 div.portfolio {
   display: inline-block;
-
   transition: 0.4s;
 }
 
@@ -153,6 +152,7 @@ img.game {
 }
 
 h4.image-text {
+  margin-bottom: 0;
   position: relative;
   text-align: center;
   padding: 5px;
